--- a/code-along/marketing.html
+++ b/code-along/marketing.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Best Thing Ever</title>
+  <!-- Add Tailwind Library -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
 </head>
 <!-- 
@@ -19,6 +20,21 @@
   🔲 Add a form
  -->
 <body>
+  <!-- Code along for classYou can have as many classes on element as you wont -->
+
+<!-- Creating a flexbox (left to right) -->
+  <!-- <div class="md: flex"> 
+  
+    <h1 class="p-8 m-8 w-1/2 text-purple-500 font-bold text-3xl border-4 border-purple-500 rounded-xl">Welcome to Tailwind!</h1>
+  
+    <div class="space-y-4 w-1/2">
+    <p>Some more stuff</p>
+    <p>Yet more stuff</p>
+    <p>Yet more stuff</p> 
+    </div>
+
+  </div> --> -->
+
   <h1 class="text-2xl text-purple-500 font-bold text-center m-8">Welcome to the best product ever</h1>
   
   <div class="px-16 md:flex bg-gray-100 items-center">
@@ -40,14 +56,21 @@
 </html>
 
 <!-- Form code -->
-<!-- <div class="m-8 w-1/2 mx-auto">
-  <form>
-    <label for="name">What is your name?</label>
-    <input type="text" id="name" name="name">
+<div class="m-8 w-1/2 mx-auto">
+  <form action="https://maps.google.com">
+<!-- ID ties the label to the input -->
 
-    <label for="favorite-color">What is your favorite color?</label>
+<!-- send q to Google maps -->
+    <label for="location">Where to?</label>
+    <input class="border" type="text" id="location" name="q">
+
+
+    <!-- <label for="name">What is your name?</label>
+    <input type="text" id="name" name="name"> -->
+
+    <!-- <label for="favorite-color">What is your favorite color?</label>
     <input type="text" id="favorite-color" name="favoriteColor">
-
-    <button>Submit form!</button>
+ -->
+    <button class="bg-green-500 text-white px-4 py-2">Submit form!</button>
   </form>
-</div> -->
+</div>
